# web-bot-auth

./: .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
crates/http-signature-directory/: README.md
crates/http-signature-directory/src/: main.rs
crates/web-bot-auth/: Cargo.toml
crates/web-bot-auth/src/: keyring.rs  lib.rs  message_signatures.rs
examples/browser-extension/: README.md
examples/caddy-plugin/: .gitignore  go.mod  go.sum  handler.go
examples/httpie-web-bot-auth/: .gitignore  README.md
examples/rust/: Cargo.toml  signing.rs  verify.rs  verify_arbitrary.rs
examples/signature-agent-card-and-registry/: .gitignore  Cargo.toml  README.md  wrangler.toml
examples/signature-agent-card-and-registry/src/: lib.rs
examples/verification-workers/src/: html.ts  index.ts
